--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Canvas Stock Simulator</title>
+<title>Stock Simulator</title>
 
 <link rel="stylesheet" href="styles.css"
 </head>
